--- a/index.html
+++ b/index.html
@@ -1,86 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tugas Rangkuman GIT</title>
-    <h1>Tugas Rangkuman GIT</h1>
-</head>
-<body>
-    <h2>1.GIT</h2>
-    <img src="Foto/Fotogit.png" width="100" height="100">
-    <p>Git adalah sistem pengontrol versi (Version Control System) pada proyek perangkat lunak yang diciptakan oleh Linus Torvalds.</p>
-<hr>
-    <h2>2.GitLab</h2>
-    <img src="Foto/fotolab.png" width="120" height="100">
-    <p>Gitlab adalah layanan yang menyediakan akses remote ke Git repositories. layanan ini menyediakan fitur tambahan yang dirancang untuk membantu mengelola siklus pengembangan software dan mempermudah dalam share data .</p>
-<hr>
-    <h2>3.GitBash</h2>
-    <img src="Foto/gitbash.jpg" width="100" height="100">
-    <p>Git Bash adalah aplikasi untuk lingkungan Microsoft Windows yang menyediakan lapisan emulasi untuk pengalaman Git command line,untuk membantu Control atau remote suatu projek.</p> 
-<hr>
-<h2>*Git Init</h2>
-    <img src="Foto/init.png" width="500" height="150">
-    <p>Untuk Mengubah Folder biasa menjadi Folder repository sehingga disebut Repo karna sudah ada name master pada teminal</p>
-<hr>
-<h2>*Git Config</h2>
-    <img src="Foto/config.png" width="500" height="150">
-    <p>untuk melihat semua konfigurasi yang ada digit dan samakan user.name dan user.email seperti gitlab</p>
-<hr>
-<h2>*Git Status</h2>
-    <img src="Foto/status.png" width="500" height="150">
-    <p>Untuk memberitahu file yang baru atau berubah yang belum kita commit</p>
-<hr>
-<h2>*Git Add</h2>
-    <img src="Foto/add.png" width="500" height="100">
-    <p>untuk menambahkan beberapa file ke tracing area  </p>
-<hr>
-<h2>*Git Commit</h2>
-    <img src="Foto/commit.png" width="500" height="150">
-    <p>untuk mencatat perubahan yang dilakukan</p>
-<hr>
-    <h2>*Git Remote</h2>
-    <img src="Foto/remote.png" width="400" height="100">
-    <p>untuk berinteraksi dengan server/gitlab</p>
-<hr>
-    <h2>*Git Push</h2>
-    <img src="Foto/push.png" width="500" height="150">
-    <p>untuk mengirim commit ke server/gitlab</p>
-<hr>
-    <h2>*Git Log</h2>
-    <img src="Foto/log.png" width="500" height="150">
-    <p>untuk melihat semua histori commit yang dilakukan</p>
-<hr>    
-    <h2>*Git checkout</h2>
-    <img src="Foto/checkout.png" width="500" height="150">
-    <p>untuk menganti ke branch lain</p>
-<hr>    
-    <h2>*Git Branch</h2>
-    <img src="Foto/branch.png" width="500" height="150">
-    <p>untuk membuat branch baru </p>
-<hr>    
-    <h2>*Git Branch -d</h2>
-    <img src="Foto/delete.png" width="500" height="150">
-    <p>untuk menghapus branch yang sudah dibuat</p>
-<hr>
-    <h2>4.SouceTree</h2>
-    <img src="Foto/tree.png" width="200" height="100">
-    <p>SouceTree adalah layanan GUI untuk mengakses GIT sama seperti GITbash hanya saja lebih muda mengunakan SouceTree karna cukup klik2 saja</p>
-<hr>    
-    <h2>*Add File</h2>
-    <img src="Foto/addfile.png" width="500" height="150">
-    <p>Memasukan File yang akan kita pakai</p>
-<hr>    
-    <h2>*Contoh</h2>
-    <img src="Foto/contoh1.png" width="1000" height="500">
-    <p>1.Garis merah menandakan teks yang belum diubah,sedangkan baris teks yang sudah diperbarui</p>
-    <p>2.ialah file yang sudah kita perbarui melalui vscode atau yang lain</p>
-    <p>3.Konflik yang terjadi antara branch master dan herly</p>
-    <p>4.untuk mengatasi suatu Konflik dibutuhkan branch yang baru sehingga memudahkan dalam menyelesaikan masalah tanpa mengubah file pada ke2 branch dan branch konflik harus mengikuti isi dari branch master </p>
-    <P>5.commit mencatat perubahan yang dilakukan(file index.html)</P>
-    <P>6.Mengirimkan commit ke server sama seperti gitbash</P>
-    <p>7,untuk menambahkan branch contoh seperti branch konflik yang digunakan untuk menyelesaikan masalah</p>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><script defer="defer" src="/static/js/main.9d2e066f.js"></script><link href="/static/css/main.92023c07.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script></body></html>
